# actix-todoApp

./: .gitignore  Cargo.toml  README.md  run
migrations/2019-08-24-093526_create_todo_table/: up.sql
src/: config.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs  schema.rs
