[package]
name = "todo"
version = "0.1.0"
authors = ["Dwi Sulfahnur <dev@dwisulfahnur.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
listenfd = "0.3"
dotenv = "0.9.0"
env_logger = "0.6"
actix-web = "1.0"
bytes = "0.4"
futures = "0.1"
diesel = { version = "1.0.0", features = ["mysql", "r2d2"] }
r2d2 = "0.8"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
derive_more = "0.15"

validator = "0.9"
validator_derive = "0.9"